<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlas_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="serov@uni-bremen.de">vamexcni</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>ad_ros2</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>

  <export>
    <costmap_2d plugin="${prefix}/elevation_layer.xml" />
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
